# visualsign-parser

./: .cla-signed-users  LICENSE  Makefile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: add-cla-user.yml  cla-file-check.yml  main.yml  stagex.yml
images/parser_app/: Containerfile
images/parser_host/: Containerfile
proto/parser/: parser.proto
src/: Cargo.toml  Makefile
src/chain_parsers/visualsign-ethereum/: CLAUDE.md  Cargo.toml
src/chain_parsers/visualsign-ethereum/src/: chains.rs  context.rs  lib.rs  registry.rs  token_metadata.rs  visualizer.rs
src/chain_parsers/visualsign-ethereum/src/contracts/: erc20.rs  mod.rs  uniswap.rs
src/chain_parsers/visualsign-ethereum/src/protocols/: mod.rs
src/chain_parsers/visualsign-ethereum/tests/: lib_test.rs
src/chain_parsers/visualsign-ethereum/tests/fixtures/: 1559.expected  legacy.expected
src/chain_parsers/visualsign-solana/: Cargo.toml  build.rs
src/chain_parsers/visualsign-solana/examples/: jupiter_example.rs
src/chain_parsers/visualsign-solana/src/: JUPITER_INTEGRATION.md  lib.rs
src/chain_parsers/visualsign-solana/src/core/: instructions.rs  mod.rs  visualsign.rs
src/chain_parsers/visualsign-solana/src/core/accounts/: decode.rs  mod.rs  system.rs
src/chain_parsers/visualsign-solana/src/core/txtypes/: v0.rs
src/chain_parsers/visualsign-solana/src/presets/: mod.rs
src/chain_parsers/visualsign-solana/src/presets/associated_token_account/: config.rs  mod.rs
src/chain_parsers/visualsign-solana/src/presets/compute_budget/: config.rs  mod.rs
src/chain_parsers/visualsign-solana/src/presets/jupiter/: mod.rs  swap.rs
src/chain_parsers/visualsign-solana/src/presets/jupiter_swap/: config.rs  mod.rs
src/chain_parsers/visualsign-solana/src/presets/jupiter_swap/tests/: tests.rs
src/chain_parsers/visualsign-solana/src/presets/stakepool/: config.rs  mod.rs
src/chain_parsers/visualsign-solana/src/presets/system/: account_labels.rs  config.rs  mod.rs
src/chain_parsers/visualsign-solana/src/presets/unknown_program/: config.rs  mod.rs
src/chain_parsers/visualsign-solana/src/utils/: mod.rs
src/chain_parsers/visualsign-solana/tests/fixtures/jupiter_swap/: sample_route.json
src/chain_parsers/visualsign-sui/: .gitignore  CONTRIBUTING.md  Cargo.toml  build.rs
src/chain_parsers/visualsign-sui/src/: field_helpers.rs  lib.rs  module_resolver.rs  parser.rs  visualsign.rs
src/chain_parsers/visualsign-sui/src/commands/: mod.rs  staking_unstaking_transfer.rs  token_transfer.rs  utils.rs
src/chain_parsers/visualsign-sui/src/core/: chain_config.rs  commands.rs  helper.rs  mod.rs  visualsign.rs
src/chain_parsers/visualsign-sui/src/core/transaction/: common.rs  decoder.rs  mod.rs
src/chain_parsers/visualsign-sui/src/integrations/: mod.rs
src/chain_parsers/visualsign-sui/src/presets/: mod.rs
src/chain_parsers/visualsign-sui/src/presets/cetus/: aggregated_test_data.json  config.rs  mod.rs
src/chain_parsers/visualsign-sui/src/presets/coin_transfer/: mod.rs
src/chain_parsers/visualsign-sui/src/presets/momentum/: aggregated_test_data.json  config.rs  mod.rs
src/chain_parsers/visualsign-sui/src/presets/sui_native_staking/: config.rs  mod.rs
src/chain_parsers/visualsign-sui/src/presets/suilend/: aggregated_test_data.json  config.rs  mod.rs
src/chain_parsers/visualsign-sui/src/utils/: address.rs  coin.rs  field_builder.rs  helpers.rs  mod.rs  numeric.rs  package.rs  test_helpers.rs  tx_args.rs
src/chain_parsers/visualsign-tron/: Cargo.toml
src/chain_parsers/visualsign-tron/src/: lib.rs
src/chain_parsers/visualsign-unspecified/: Cargo.toml
src/chain_parsers/visualsign-unspecified/src/: lib.rs
src/codegen/src/: main.rs
src/core/accounts/: jupiter.rs
src/health_check/src/: lib.rs
src/host_primitives/src/: lib.rs
src/integration/: Cargo.toml
src/integration/src/: lib.rs
src/integration/tests/: parser.rs  signature_metadata_e2e.rs  signature_metadata_test.rs
src/parser/app/: Cargo.toml
src/parser/app/src/: chain_conversion.rs  cli.rs  lib.rs  main.rs  registry.rs  service.rs
src/parser/app/src/routes/: parse.rs
src/parser/cli/: Cargo.toml
src/parser/cli/src/: chains.rs  cli.rs  lib.rs  logger.rs  main.rs
src/parser/cli/tests/: cli_test.rs
src/parser/cli/tests/fixtures/: solana-json.expected  solana-json.input  solana-text.expected  solana-text.input
src/parser/host/src/: host.rs
src/visualsign/: Cargo.toml  README.md
src/visualsign/docs/: DETERMINISTIC_ORDERING.md
src/visualsign/examples/: compile_time_check.rs
src/visualsign/src/: errors.rs  field_builders.rs  lib.rs  registry.rs  test_utils.rs  vsptrait.rs
