[workspace]
members = [
  "codegen",
  "generated",
  "health_check",
  "host_primitives",
  "integration",
  "metrics",
  "parser/app",
  "parser/cli",
  "parser/host",
  "visualsign",
  "chain_parsers/visualsign-ethereum",
  "chain_parsers/visualsign-solana",
  "chain_parsers/visualsign-sui",
  "chain_parsers/visualsign-unspecified",
]

resolver = "3"

[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true
overflow-checks = true
panic = 'unwind'
incremental = true

[workspace.dependencies]
# See https://doc.rust-lang.org/nightly/cargo/reference/workspaces.html#the-dependencies-table
qos_client = { git = "https://github.com/tkhq/qos.git", rev = "c7f99535bf6c1799e400d9dfa3ad000690896af2", default-features = false }
qos_core = { git = "https://github.com/tkhq/qos.git", rev = "c7f99535bf6c1799e400d9dfa3ad000690896af2", default-features = false }
qos_crypto = { git = "https://github.com/tkhq/qos.git", rev = "c7f99535bf6c1799e400d9dfa3ad000690896af2", default-features = false }
qos_hex = { git = "https://github.com/tkhq/qos.git", rev = "c7f99535bf6c1799e400d9dfa3ad000690896af2", default-features = false }
qos_net = { git = "https://github.com/tkhq/qos.git", rev = "c7f99535bf6c1799e400d9dfa3ad000690896af2", default-features = false }
qos_nsm = { git = "https://github.com/tkhq/qos.git", rev = "c7f99535bf6c1799e400d9dfa3ad000690896af2", default-features = false }
qos_p256 = { git = "https://github.com/tkhq/qos.git", rev = "c7f99535bf6c1799e400d9dfa3ad000690896af2", default-features = false }
qos_test_primitives = { git = "https://github.com/tkhq/qos.git", rev = "c7f99535bf6c1799e400d9dfa3ad000690896af2", default-features = false }

# Common dependencies
base64 = "0.22.1"
hex = "0.4.3"

once_cell = "1.21.3"
serde_json = "1.0.142"

tracing = "0.1.41"

# Pin visualsign dependencies
visualsign = { path = "./visualsign" }
