[workspace]
members = [
  "codegen",
  "generated",
  "health_check",
  "host_primitives",
  "integration",
  "metrics",
  "parser/app",
  "parser/cli",
  "parser/host",
  "visualsign",
  "chain_parsers/visualsign-ethereum",
  "chain_parsers/visualsign-solana",
  "chain_parsers/visualsign-sui",
  "chain_parsers/visualsign-tron",
  "chain_parsers/visualsign-unspecified",
]

resolver = "3"

[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true
overflow-checks = true
panic = 'unwind'
incremental = true

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/anchorageoss/visualsign-parser"

[workspace.dependencies]
# See https://doc.rust-lang.org/nightly/cargo/reference/workspaces.html#the-dependencies-table
qos_client = { git = "https://github.com/tkhq/qos.git", rev = "90dec56fc06926b7fb7439175c58789492ec82c6", default-features = false }
qos_core = { git = "https://github.com/tkhq/qos.git", rev = "90dec56fc06926b7fb7439175c58789492ec82c6", default-features = false }
qos_crypto = { git = "https://github.com/tkhq/qos.git", rev = "90dec56fc06926b7fb7439175c58789492ec82c6", default-features = false }
qos_hex = { git = "https://github.com/tkhq/qos.git", rev = "90dec56fc06926b7fb7439175c58789492ec82c6", default-features = false }
qos_net = { git = "https://github.com/tkhq/qos.git", rev = "90dec56fc06926b7fb7439175c58789492ec82c6", default-features = false }
qos_nsm = { git = "https://github.com/tkhq/qos.git", rev = "90dec56fc06926b7fb7439175c58789492ec82c6", default-features = false }
qos_p256 = { git = "https://github.com/tkhq/qos.git", rev = "90dec56fc06926b7fb7439175c58789492ec82c6", default-features = false }
qos_test_primitives = { git = "https://github.com/tkhq/qos.git", rev = "90dec56fc06926b7fb7439175c58789492ec82c6", default-features = false }

# Common dependencies
base64 = "0.22.1"
hex = "0.4.3"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

tokio = { version = "1.43.1", default-features = false }

tracing = "0.1.41"

# Pin visualsign dependencies
visualsign = { path = "./visualsign" }
