[package]
name = "integration"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
qos_core = { workspace = true, features = ["mock"] }
qos_crypto = { workspace = true }
qos_p256 = { workspace = true }
qos_hex = { workspace = true }
qos_nsm = { workspace = true, features = ["mock"] }
qos_test_primitives = { workspace = true }

parser_host = { path = "../parser/host", default-features = false }
parser_app = { path = "../parser/app", default-features = false }

generated = { path = "../generated", default-features = false }

host_primitives = { path = "../host_primitives" }
health_check = { path = "../health_check" }

tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
borsh = { version = "1.0", features = [
  "std",
  "derive",
], default-features = false }
tonic = "0.9"
prost = { version = "0.11", default-features = false }
rand = "0.9.1"
futures = "0.3"
serde_json = { version = "1.0", features = ["std"], default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
chrono = { version = "0.4", features = [
  "std",
  "clock",
], default-features = false }
k256 = { version = "0.12", features = [
  "ecdsa",
  "ecdsa-core",
], default-features = false }
bs58 = { version = "0.5.1", default-features = false }

# for encoding and decoding txs
base64 = "0.22.1"
tracing-test = "0.2.5"

[dev-dependencies]
visualsign-solana = { path = "../chain_parsers/visualsign-solana" }
tracing = { workspace = true }
