[package]
name = "visualsign-ethereum"
version = "0.1.0"
edition = "2024"

[dependencies]
visualsign = { workspace = true }
hex = "0.4.3"
base64 = "0.22.1"
alloy-consensus = "1.0.20"
alloy-primitives = "1.0.20"
alloy-eips = "1.0.20"
alloy-rlp = "0.3.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
