[package]
name = "visualsign-ethereum"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = "1.0.20"
alloy-primitives = "1.0.20"
alloy-eips = "1.0.42"
alloy-rlp = "0.3.12"
alloy-sol-types = "1.4.1"
alloy-contract = "1.0.42"
base64 = "0.22.1"
hex = "0.4.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
visualsign = { workspace = true }
