[package]
name = "visualsign-ethereum"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = "1.0.42"
alloy-primitives = "1.3.0"
alloy-rlp = "0.3.12"
alloy-sol-types = "1.4.1"
alloy-contract = "1.0.42"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["std", "clock"] }
hex = "0.4.3"
log = "0.4"
num_enum = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0.12"
visualsign = { workspace = true }
