[package]
name = "visualsign-solana"
version = "0.1.0"
edition = "2024"

[dependencies]
solana_parser = { git = "https://github.com/tkhq/solana-parser.git" }
visualsign = {workspace = true}
hex = "0.4.3"
base64 = "0.22.1"
borsh = "1.5.5"
bincode = "1.3.3"
solana-sdk = "2.1.0"
solana-program = "2.1"
spl-token = "7.0"
spl-associated-token-account = "6.0"
spl-stake-pool = "2.0"
log = "0.4"
