[package]
name = "visualsign-solana"
version = "0.1.0"
edition = "2024"

[dependencies]

tracing = { workspace = true }
# After https://github.com/tkhq/solana-parser/pull/13 was merged we found that it was looking at files directly which breaks tests but seems to work in the enclave?
solana_parser = { git = "https://github.com/tkhq/solana-parser.git", rev = "9a88e3ef889232a5c1bf903f93f3b3fbfdcd69c8" }
visualsign = { workspace = true }
hex = "0.4.3"
base64 = "0.22.1"
borsh = "1.5.5"
bincode = "1.3.3"
solana-sdk = "2.1.15"
solana-transaction-status = "2.2.7"
solana-program = "2.1"
spl-token = "7.0.0"
spl-associated-token-account = "6.0"
spl-stake-pool = "2.0.2"
solana-system-interface = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jupiter-swap-api-client = "0.2.0"
base64 = "0.22.1"
bs58 = "0.5"
