[package]
name = "visualsign-sui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
bcs = "0.1.6"

move-core-types = { git = "https://github.com/MystenLabs/sui", tag = "sui_v1.52.0_1751960694_ci", package = "move-core-types" }
move-bytecode-utils = { git = "https://github.com/MystenLabs/sui", tag = "sui_v1.52.0_1751960694_ci", package = "move-bytecode-utils" }

sui-json = { git = "https://github.com/MystenLabs/sui", tag = "sui_v1.52.0_1751960694_ci", package = "sui-json" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "sui_v1.52.0_1751960694_ci", package = "sui-types" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", tag = "sui_v1.52.0_1751960694_ci", package = "sui-json-rpc-types" }

visualsign = { workspace = true }
