[package]
name = "visualsign-sui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
hex = "0.4.3"

bcs = "0.1.6"

move-core-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.52.2", package = "move-core-types" }
move-bytecode-utils = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.52.2", package = "move-bytecode-utils" }

sui-json = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.52.2", package = "sui-json" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.52.2", package = "sui-types" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.52.2", package = "sui-json-rpc-types" }

visualsign = { workspace = true }
