[package]
name = "visualsign-tron"
version = "0.1.0"
edition = "2024"

[dependencies]
anychain-tron = "0.2.13"
base58 = "0.2"
base64 = "0.22.1"
chrono = "0.4"
hex = "0.4.3"
log = "0.4"
protobuf = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0.12"
visualsign = { workspace = true }
