[package]
name = "parser_app"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
borsh = { version = "1.5.7", features = [
  "std",
], default-features = false }
qos_core = { workspace = true }
qos_crypto = { workspace = true }
qos_hex = { workspace = true }
qos_p256 = { workspace = true }
generated = { path = "../../generated" }
visualsign = {workspace = true}
visualsign-solana = { path = "../../chain_parsers/visualsign-solana"}
visualsign-unspecified = { path = "../../chain_parsers/visualsign-unspecified"}

serde_json = "1"
serde = { version = "1", features = ["derive"], default-features = false }
bincode = "1.3.3"

bs58 = { version = "0.5.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }

[features]
vsock = ["qos_core/vm"]
