[package]
name = "parser_cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
tracing = { workspace = true }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

parser_app = { path = "../app" }
borsh = { version = "1.5.7", features = ["std"], default-features = false }
generated = { path = "../../generated" }
visualsign = { workspace = true }
#visualsign-ethereum = { path = "../../chain_parsers/visualsign-ethereum" }
visualsign-solana = { path = "../../chain_parsers/visualsign-solana" }
visualsign-unspecified = { path = "../../chain_parsers/visualsign-unspecified" }

serde_json = "1"
serde = { version = "1", features = ["derive"], default-features = false }
bincode = "1.3.3"

clap = { version = "4.0", features = ["derive"] }

bs58 = { version = "0.5.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
